IN-22 : changes after review

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -17,5 +17,13 @@
         "title": "Hotels"
       }
     }
+  }, 
+  "search": {
+    "input": {
+      "main": "With InVisible, search activities nearby !",
+      "search": "New search"
+    }, 
+    "moreResult": "More results"
+
   }
 }
