--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -17,5 +17,8 @@
         "title": "Hotels"
       }
     }
+  },
+  "notFound": {
+    "title": "The page you are looking for can’t be found."
   }
 }
