[IN-34]: Adding footer

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -15,6 +15,18 @@
       },
       "hotel": {
         "title": "Hotels"
+      },
+      "accommodation": {
+        "title": "Accomodation"
+      },
+      "cruise": {
+        "title": "Cruises"
+      },
+      "welfare": {
+        "title": "Welfare"
+      },
+      "art": {
+        "title": "Arts and culture"
       }
     }
   },
