[IN:34]: Start of the activity page

--- a/public/langs/fr.json
+++ b/public/langs/fr.json
@@ -39,5 +39,9 @@
   },
   "notFound": {
     "title": "La page que vous cherchez n'existe pas."
+  },
+  "card": {
+    "distance": "A {{distance}} km.",
+    "comment": "({{commentNumber}} commentaires)"
   }
 }
