--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -39,5 +39,9 @@
   },
   "notFound": {
     "title": "The page you are looking for can’t be found."
+  },
+  "card": {
+    "distance": "A {{distance}} km.",
+    "comment": "({{commentNumber}} comments)"
   }
 }
