IN_27: add generic toast, behavior subject, captcha

--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -25,5 +25,11 @@
     }, 
     "moreResult": "More results"
 
+  },
+  "user" : {
+    "defaultAvatar" : "user avatar default image", 
+    "registerLink" : "Sign up", 
+    "connectionLink" : "Sign in", 
+    "signOutLink": "Sign out"
   }
 }
